--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chuegy Crocs</title>
 </head>
 <body>
+    <div class="container"></div>
     <script src="main.js" type="module"></script>
 </body>
 </html>
